fixed footer not showing on smaller screens

--- a/src/Faq.css
+++ b/src/Faq.css
@@ -66,13 +66,6 @@
     /* background-color: black; */
 }
 
-.Faq-footer-divider-div {
-    margin-top: 20px;
-    width: 100%;
-    height: 2px;
-    background-color: white
-}
-
 @media only screen and (max-width : 1120px) {
     .Faq-question-answer-parent-div {
         margin-left: 75px;
