--- a/src/TopicHeader.css
+++ b/src/TopicHeader.css
@@ -40,9 +40,4 @@
     .TopicHeader-header-parent-div {
         font-size: 13px;
     }
-
-    .Footer-parent-div {
-        top: 1000px;
-        font-size: 12px;
-    }
 }
